# bhc

./: Cargo.toml  README.md  ROADMAP.md  mise.toml  rust-toolchain.toml
crates/bhc/: Cargo.toml  README.md
crates/bhc-codegen/: Cargo.toml  README.md
crates/bhc-codegen/docs/: README.md
crates/bhc-codegen/src/: lib.rs
crates/bhc-codegen/src/llvm/: context.rs  loop_lower.rs  lower.rs  mod.rs  module.rs  types.rs
crates/bhc-core/: Cargo.toml  README.md
crates/bhc-core/docs/: README.md
crates/bhc-core/src/: escape.rs  lib.rs  pretty.rs  uarray.rs
crates/bhc-core/src/eval/: env.rs  mod.rs  value.rs
crates/bhc-core/src/simplify/: beta.rs  case.rs  dead.rs  expr_util.rs  fold.rs  inline.rs  mod.rs  occurrence.rs  subst.rs
crates/bhc-driver/: Cargo.toml  README.md
crates/bhc-driver/docs/: README.md
crates/bhc-driver/src/: cpp.rs  lib.rs  report.rs
crates/bhc-driver/tests/: integration.rs
crates/bhc-e2e-tests/: Cargo.toml
crates/bhc-e2e-tests/fixtures/tier1_simple/arithmetic/: main.hs
crates/bhc-e2e-tests/fixtures/tier1_simple/let_binding/: main.hs
crates/bhc-e2e-tests/fixtures/tier1_simple/list_range/: main.hs
crates/bhc-e2e-tests/fixtures/tier1_simple/simplifier_basic/: main.hs
crates/bhc-e2e-tests/fixtures/tier2_functions/case_expr/: expected.txt  main.hs
crates/bhc-e2e-tests/fixtures/tier2_functions/custom_adt/: main.hs
crates/bhc-e2e-tests/fixtures/tier2_functions/derive_eq/: main.hs
crates/bhc-e2e-tests/fixtures/tier2_functions/factorial/: main.hs
crates/bhc-e2e-tests/fixtures/tier2_functions/fibonacci/: main.hs
crates/bhc-e2e-tests/fixtures/tier2_functions/guards/: main.hs
crates/bhc-e2e-tests/fixtures/tier2_functions/lambda/: main.hs
crates/bhc-e2e-tests/src/: golden.rs  gpu.rs  lib.rs  native.rs  runner.rs  wasm.rs
crates/bhc-e2e-tests/tests/: gpu_e2e.rs  native_e2e.rs  wasm_e2e.rs
crates/bhc-gpu/: Cargo.toml  README.md
crates/bhc-gpu/docs/: README.md
crates/bhc-gpu/src/: context.rs  device.rs  kernel.rs  lib.rs  lower.rs  memory.rs  transfer.rs
crates/bhc-gpu/src/codegen/: amdgcn.rs  metal.rs  mod.rs  ptx.rs  spirv.rs  wgsl.rs
crates/bhc-gpu/src/runtime/: cuda.rs
crates/bhc-hir-to-core/: Cargo.toml  README.md
crates/bhc-hir-to-core/docs/: README.md
crates/bhc-hir-to-core/src/: binding.rs  context.rs  deriving.rs  dictionary.rs  expr.rs  lib.rs  pattern.rs
crates/bhc-interface/: Cargo.toml  README.md
crates/bhc-interface/docs/: README.md
crates/bhc-interface/src/: convert.rs  generate.rs  lib.rs
crates/bhc-lower/: Cargo.toml  README.md
crates/bhc-lower/docs/: README.md
crates/bhc-lower/src/: context.rs  desugar.rs  lib.rs  loader.rs  lower.rs  resolve.rs
crates/bhc-lsp/: Cargo.toml
crates/bhc-lsp/src/: analysis.rs  completion.rs  diagnostics.rs  document.rs  handlers.rs  hover.rs  navigation.rs  server.rs  symbols.rs
crates/bhc-playground/: Cargo.toml  README.md
crates/bhc-playground/docs/: DEPLOYMENT.md  README.md
crates/bhc-playground/src/: lib.rs
crates/bhc-typeck/: Cargo.toml  README.md
crates/bhc-typeck/docs/: README.md
crates/bhc-typeck/src/: binding_groups.rs  builtins.rs  context.rs  diagnostics.rs  env.rs  generalize.rs  infer.rs  instantiate.rs  kind_check.rs  lib.rs  nat_solver.rs  pattern.rs  shape_bridge.rs  shape_diagrams.rs  suggest.rs  type_families.rs  unify.rs
crates/bhc-typeck/tests/: dependent_types.rs  integration.rs
crates/bhc-wasm/: Cargo.toml  README.md
crates/bhc-wasm/docs/: README.md
crates/bhc-wasm/src/: core_lower.rs  lib.rs  lower.rs  wasi.rs
crates/bhc-wasm/src/codegen/: emitter.rs  mod.rs  simd.rs  types.rs
crates/bhc-wasm/src/runtime/: arena.rs  gc.rs  memory.rs  mod.rs
crates/bhc-wasm/tests/: codegen_tests.rs
crates/bhc/docs/: README.md
crates/bhc/src/: main.rs
crates/bhc/tests/: xmonad_compile.rs
rts/bhc-rts/: Cargo.toml  README.md
rts/bhc-rts/docs/: README.md
rts/bhc-rts/src/: ffi.rs  lib.rs
stdlib/bhc-base/: Cargo.toml  README.md
stdlib/bhc-base/docs/: README.md
stdlib/bhc-base/src/: applicative.rs  arrow.rs  category.rs  char.rs  function.rs  io.rs  lib.rs  list.rs  monad.rs  string.rs
stdlib/bhc-concurrent/: Cargo.toml  README.md
stdlib/bhc-concurrent/docs/: README.md
stdlib/bhc-concurrent/src/: channel.rs  ffi.rs  lib.rs  scope.rs  stm.rs  task.rs
stdlib/bhc-containers/: Cargo.toml  README.md
stdlib/bhc-containers/docs/: README.md
stdlib/bhc-containers/src/: intmap.rs  intset.rs  lib.rs  map.rs  sequence.rs  set.rs
stdlib/bhc-numeric/: Cargo.toml  README.md
stdlib/bhc-numeric/docs/: README.md
stdlib/bhc-numeric/src/: arena.rs  blas.rs  blas_accelerate.rs  blas_openblas.rs  decomp.rs  lib.rs  matrix.rs  simd.rs  sparse.rs  tensor.rs  vector.rs
stdlib/bhc-numeric/tests/: blas_tests.rs  fusion_tests.rs  matrix_tests.rs  tensor_tests.rs
stdlib/bhc-prelude/: Cargo.toml  README.md
stdlib/bhc-prelude/docs/: BENCHMARKS.md  DESIGN.md  README.md
stdlib/bhc-prelude/hs/BHC/: Prelude.hs
stdlib/bhc-prelude/src/: bool.rs  either.rs  function.rs  lib.rs  list.rs  maybe.rs  numeric.rs  ordering.rs  tuple.rs
stdlib/bhc-prelude/tests/: property_tests.rs
stdlib/bhc-system/: Cargo.toml  README.md
stdlib/bhc-system/src/: environment.rs  filepath.rs  io.rs  lib.rs  process.rs
stdlib/bhc-text/: Cargo.toml  README.md
stdlib/bhc-text/docs/: README.md
stdlib/bhc-text/src/: bytearray.rs  bytestring.rs  lib.rs  simd.rs  text.rs
stdlib/bhc-transformers/: Cargo.toml  README.md
stdlib/bhc-transformers/docs/: README.md
stdlib/bhc-transformers/src/: except.rs  identity.rs  lib.rs  maybe.rs  reader.rs  rws.rs  state.rs  writer.rs
stdlib/bhc-utils/: Cargo.toml  README.md
stdlib/bhc-utils/src/: json.rs  lib.rs  random.rs  time.rs
tools/bhc-docs/: Cargo.toml
tools/bhc-docs/src/: build.rs  coverage.rs  haddock.rs  lib.rs  main.rs  serve.rs
tools/bhc-docs/src/extract/: mod.rs
tools/bhc-docs/src/model/: mod.rs
tools/bhc-docs/src/render/: html.rs  json.rs  markdown.rs  mod.rs
tools/bhc-docs/src/search/: mod.rs
tools/bhi/: Cargo.toml  README.md
tools/bhi/docs/: README.md
tools/bhi/src/: main.rs
(+311 files in other folders)
