[workspace]
resolver = "2"
members = [
    # Compiler driver
    "crates/bhc",

    # Foundation crates (no dependencies on other bhc crates)
    "crates/bhc-span",
    "crates/bhc-arena",
    "crates/bhc-intern",
    "crates/bhc-index",
    "crates/bhc-data-structures",

    # Diagnostics (depends on span)
    "crates/bhc-diagnostics",

    # Syntax and parsing
    "crates/bhc-lexer",
    "crates/bhc-ast",
    "crates/bhc-parser",

    # Type system
    "crates/bhc-types",
    "crates/bhc-typeck",

    # Lowering
    "crates/bhc-lower",
    "crates/bhc-hir-to-core",

    # Intermediate representations
    "crates/bhc-hir",
    "crates/bhc-core",
    "crates/bhc-tensor-ir",
    "crates/bhc-loop-ir",

    # Compilation infrastructure
    "crates/bhc-session",
    "crates/bhc-query",
    "crates/bhc-driver",

    # FFI and external libraries
    "crates/bhc-ffi",

    # Code generation
    "crates/bhc-target",
    "crates/bhc-codegen",
    "crates/bhc-gpu",
    "crates/bhc-wasm",
    "crates/bhc-linker",

    # Package management
    "crates/bhc-package",
    "crates/bhc-interface",

    # Procedural macros
    "crates/bhc-macros",

    # Runtime system
    "rts/bhc-rts",
    "rts/bhc-rts-gc",
    "rts/bhc-rts-arena",
    "rts/bhc-rts-scheduler",
    "rts/bhc-rts-alloc",

    # Tools
    "tools/bhci",
    "tools/bhi",
    "tools/bhc-docs",

    # Web playground (WASM-compatible)
    "crates/bhc-playground",

    # Standard library
    "stdlib/bhc-prelude",
    "stdlib/bhc-base",
    "stdlib/bhc-containers",
    "stdlib/bhc-text",
    "stdlib/bhc-transformers",
    "stdlib/bhc-numeric",
    "stdlib/bhc-concurrent",
    "stdlib/bhc-system",
    "stdlib/bhc-utils",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.82"
license = "BSD-3-Clause"
repository = "https://github.com/raskell-io/bhc"
homepage = "https://bhc.raskell.io"
authors = ["BHC Contributors"]
keywords = ["haskell", "compiler", "llvm", "functional"]
categories = ["compilers", "development-tools"]
readme = "README.md"

[workspace.dependencies]
# Internal crates
bhc-span = { version = "0.2.1", path = "crates/bhc-span" }
bhc-arena = { version = "0.2.1", path = "crates/bhc-arena" }
bhc-intern = { version = "0.2.1", path = "crates/bhc-intern" }
bhc-index = { version = "0.2.1", path = "crates/bhc-index" }
bhc-data-structures = { version = "0.2.1", path = "crates/bhc-data-structures" }
bhc-diagnostics = { version = "0.2.1", path = "crates/bhc-diagnostics" }
bhc-lexer = { version = "0.2.1", path = "crates/bhc-lexer" }
bhc-ast = { version = "0.2.1", path = "crates/bhc-ast" }
bhc-parser = { version = "0.2.1", path = "crates/bhc-parser" }
bhc-types = { version = "0.2.1", path = "crates/bhc-types" }
bhc-typeck = { version = "0.2.1", path = "crates/bhc-typeck" }
bhc-lower = { version = "0.2.1", path = "crates/bhc-lower" }
bhc-hir-to-core = { version = "0.2.1", path = "crates/bhc-hir-to-core" }
bhc-hir = { version = "0.2.1", path = "crates/bhc-hir" }
bhc-core = { version = "0.2.1", path = "crates/bhc-core" }
bhc-tensor-ir = { version = "0.2.1", path = "crates/bhc-tensor-ir" }
bhc-loop-ir = { version = "0.2.1", path = "crates/bhc-loop-ir" }
bhc-session = { version = "0.2.1", path = "crates/bhc-session" }
bhc-query = { version = "0.2.1", path = "crates/bhc-query" }
bhc-driver = { version = "0.2.1", path = "crates/bhc-driver" }
bhc-target = { version = "0.2.1", path = "crates/bhc-target" }
bhc-codegen = { version = "0.2.1", path = "crates/bhc-codegen" }
bhc-gpu = { version = "0.2.1", path = "crates/bhc-gpu" }
bhc-wasm = { version = "0.2.1", path = "crates/bhc-wasm" }
bhc-linker = { version = "0.2.1", path = "crates/bhc-linker" }
bhc-ffi = { version = "0.2.1", path = "crates/bhc-ffi" }
bhc-package = { version = "0.2.1", path = "crates/bhc-package" }
bhc-interface = { version = "0.2.1", path = "crates/bhc-interface" }
bhc-macros = { version = "0.2.1", path = "crates/bhc-macros" }
bhc-playground = { version = "0.2.1", path = "crates/bhc-playground" }

# RTS crates
bhc-rts = { version = "0.2.1", path = "rts/bhc-rts" }
bhc-rts-gc = { version = "0.2.1", path = "rts/bhc-rts-gc" }
bhc-rts-arena = { version = "0.2.1", path = "rts/bhc-rts-arena" }
bhc-rts-scheduler = { version = "0.2.1", path = "rts/bhc-rts-scheduler" }
bhc-rts-alloc = { version = "0.2.1", path = "rts/bhc-rts-alloc" }

# Standard library crates
bhc-prelude = { version = "0.2.1", path = "stdlib/bhc-prelude" }
bhc-base = { version = "0.2.1", path = "stdlib/bhc-base" }
bhc-containers = { version = "0.2.1", path = "stdlib/bhc-containers" }
bhc-text = { version = "0.2.1", path = "stdlib/bhc-text" }
bhc-transformers = { version = "0.2.1", path = "stdlib/bhc-transformers" }
bhc-numeric = { version = "0.2.1", path = "stdlib/bhc-numeric" }
bhc-concurrent = { version = "0.2.1", path = "stdlib/bhc-concurrent" }
bhc-system = { version = "0.2.1", path = "stdlib/bhc-system" }
bhc-utils = { version = "0.2.1", path = "stdlib/bhc-utils" }

# External dependencies
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "string"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
petgraph = "0.6"
dashmap = "5.5"
rustc-hash = "1.1"
indexmap = "2.1"
smallvec = { version = "1.11", features = ["union", "const_generics", "serde"] }
bumpalo = { version = "3.14", features = ["collections"] }
typed-arena = "2.0"
once_cell = "1.19"
rayon = "1.8"
crossbeam = "0.8"
crossbeam-channel = "0.5"
num-traits = "0.2"
num-derive = "0.4"
bitflags = { version = "2.4", features = ["serde"] }
either = "1.9"
im = "15.1"
itertools = "0.12"
unicode-xid = "0.2"
unicode-normalization = "0.1"
logos = "0.14"
codespan-reporting = "0.11"
ariadne = "0.4"
miette = { version = "7.0", features = ["fancy"] }
salsa = "0.17"
camino = { version = "1.1", features = ["serde1"] }
tempfile = "3.9"
similar = "2.4"
insta = { version = "1.34", features = ["yaml"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
test-log = "0.2"
pretty_assertions = "1.4"
semver = "1.0"
bincode = "1.3"

# LLVM bindings for code generation
inkwell = { version = "0.5", features = ["llvm18-0"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
# Faster builds for development
opt-level = 0
debug = true

[profile.dev.package."*"]
# Optimize dependencies even in dev
opt-level = 2
