[package]
name = "bhc-driver"
description = "Compilation orchestration and pipeline for BHC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates - core compilation
bhc-span = { workspace = true }
bhc-diagnostics = { workspace = true }
bhc-session = { workspace = true }
bhc-query = { workspace = true }
bhc-lexer = { workspace = true }
bhc-ast = { workspace = true }
bhc-parser = { workspace = true }
bhc-hir = { workspace = true }
bhc-lower = { workspace = true }
bhc-hir-to-core = { workspace = true }
bhc-typeck = { workspace = true }
bhc-intern = { workspace = true }

# Internal crates - IR pipeline
bhc-core = { workspace = true }
bhc-tensor-ir = { workspace = true }
bhc-loop-ir = { workspace = true }

# Internal crates - backend
bhc-target = { workspace = true }
bhc-codegen = { workspace = true }
bhc-linker = { workspace = true }
bhc-wasm = { workspace = true }
bhc-gpu = { workspace = true }

# External dependencies
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
camino = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
