[package]
name = "bhc-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "GPU backend for BHC (CUDA/ROCm code generation and runtime)"

[features]
default = []
# NVIDIA CUDA support
cuda = []
# AMD ROCm/HIP support
rocm = []

[dependencies]
# Internal crates
bhc-tensor-ir.workspace = true
bhc-codegen.workspace = true
bhc-target.workspace = true
bhc-ffi.workspace = true
bhc-span.workspace = true
bhc-intern.workspace = true
bhc-index.workspace = true
bhc-session.workspace = true
bhc-rts-alloc.workspace = true

# External dependencies
rustc-hash.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
serde.workspace = true
tracing.workspace = true
libloading = "0.8"

[dev-dependencies]
proptest.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
