[package]
name = "bhc-lower"
description = "AST to HIR lowering for BHC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
bhc-span = { workspace = true }
bhc-intern = { workspace = true }
bhc-index = { workspace = true }
bhc-ast = { workspace = true }
bhc-hir = { workspace = true }
bhc-types = { workspace = true }
bhc-diagnostics = { workspace = true }
bhc-parser = { workspace = true }
bhc-lexer = { workspace = true }

# External dependencies
thiserror = { workspace = true }
rustc-hash = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
