[package]
name = "bhc-lsp"
description = "Language Server Protocol implementation for BHC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "bhc-lsp"
path = "src/main.rs"

[dependencies]
bhc-span = { workspace = true }
bhc-intern = { workspace = true }
bhc-diagnostics = { workspace = true }
bhc-lexer = { workspace = true }
bhc-ast = { workspace = true }
bhc-parser = { workspace = true }
bhc-types = { workspace = true }
bhc-typeck = { workspace = true }
bhc-hir = { workspace = true }
bhc-lower = { workspace = true }
bhc-session = { workspace = true }

lsp-types = "0.97"
lsp-server = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = "0.5"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "6"
ropey = "1"
camino = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
