[package]
name = "bhc-rts"
description = "Core Runtime System for the Basel Haskell Compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
bhc-rts-alloc = { workspace = true }
bhc-rts-arena = { workspace = true }
bhc-rts-gc = { workspace = true }
bhc-rts-scheduler = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
