[package]
name = "bhc-base"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Base library for BHC: Data.*, Control.*, System.* modules"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bhc-prelude = { path = "../bhc-prelude" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
