[package]
name = "bhc-numeric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Numeric computing for BHC: Tensor, Vector, Matrix, SIMD, BLAS"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bhc-prelude = { path = "../bhc-prelude" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
default = ["simd"]
simd = []
blas = []
openblas = ["blas"]
mkl = ["blas"]
