[package]
name = "bhc-numeric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Numeric computing for BHC: Tensor, Vector, Matrix, SIMD, BLAS"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bhc-prelude = { version = "0.2.2", path = "../bhc-prelude" }
bhc-rts-arena = { version = "0.2.2", path = "../../rts/bhc-rts-arena" }
bhc-rts-alloc = { version = "0.2.2", path = "../../rts/bhc-rts-alloc" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
default = ["simd"]
simd = []
blas = []
openblas = ["blas"]
accelerate = ["blas"]  # macOS only - uses Apple Accelerate framework
mkl = ["blas"]
neon = []  # ARM NEON SIMD support (aarch64)
