[package]
name = "bhc-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Utility modules for BHC: Time, Random, JSON"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bhc-prelude = { path = "../bhc-prelude" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
