[package]
name = "bhi"
description = "Basel Haskell Inspector - IR and kernel report viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bhi"
path = "src/main.rs"

[dependencies]
bhc-span = { workspace = true }
bhc-intern = { workspace = true }
bhc-diagnostics = { workspace = true }
bhc-ast = { workspace = true }
bhc-hir = { workspace = true }
bhc-core = { workspace = true }
bhc-tensor-ir = { workspace = true }
bhc-loop-ir = { workspace = true }
bhc-parser = { workspace = true }
bhc-lower = { workspace = true }
bhc-hir-to-core = { workspace = true }
bhc-typeck = { workspace = true }
bhc-types = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
colored = "2"
similar = "2"

[dev-dependencies]
pretty_assertions = { workspace = true }
